# rgskin

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json
.cargo/: config.toml
rgskin_derive/: Cargo.toml
rgskin_derive/src/: lib.rs
scripts/: fix-pkg.js
src/: common.rs  common_traits.rs  lib.rs  resources.rs
src/common/: alignment.rs  color.rs  macros.rs  mod.rs  skin.rs  traits.rs  vector.rs
src/converting/: fluxis.rs  mod.rs  osu.rs  quaver.rs
src/error/: decode_errors.rs  import_errors.rs  mod.rs
src/exporting/: browser.rs  mod.rs  native.rs  node.rs
src/extensions/: binary_extensions.rs  binary_option_extensions.rs  mod.rs  texture_extensions.rs  vec_extensions.rs
src/image_proc/: fluxis.rs  fluxis_preview.rs  macros.rs  mod.rs  osu.rs  proc.rs
src/importing/: browser.rs  common.rs  macros.rs  mod.rs  native.rs  node.rs
src/io/: binary.rs  binary_store.rs  mod.rs  node.rs  raw_bytes.rs  store.rs  string_pattern.rs  texture.rs  texture_processor.rs  texture_store.rs  traits.rs
src/io/sample/: mod.rs  sample.rs  sample_store.rs
src/io/texture/: mod.rs  texture.rs  texture_processor.rs  texture_store.rs
src/parse/: ini.rs
src/skin/: mod.rs
src/skin/fluxis/: macros.rs  mod.rs  skin.rs  static_assets.rs
src/skin/fluxis/layout_json/: component.rs  gameplay.rs  layout_json.rs  mod.rs
src/skin/fluxis/skin_json/: colors.rs  info.rs  keymode.rs  mod.rs  overrides.rs  skin_json.rs
src/skin/generic/: elements.rs  gameplay.rs  keymode.rs  layout.rs  metadata.rs  mod.rs  skin.rs  sound.rs  ui.rs
src/skin/osu/: general.rs  keymode.rs  macros.rs  mod.rs  skin.rs  skin_ini.rs  static_assets.rs
src/skin/osu/config/: general.rs  keymode.rs  mod.rs
src/skin/quaver/: dynamic_assets.rs  mod.rs  skin.rs  skin_ini.rs  static_assets.rs
src/skin/quaver/config/: general.rs  keymode.rs  main_menu.rs  menu_border.rs  mod.rs  results.rs  song_select.rs
src/skin/shared/: structs.rs
src/utils/: fluxis.rs  io.rs  macros.rs  math.rs  merge.rs  mod.rs  osu.rs  quaver.rs  serde.rs  skin.rs  string.rs  wasm.rs
tests/: configs.rs  fluxis_preview.rs  fluxis_proc.rs  merge_osu.rs  osu_proc.rs  proc.rs  to_fluxis.rs  to_osu.rs  to_quaver.rs  what.rs
tests/configs/osu/: bloomoon.ini  bubbleskin.ini  fnf.ini
tests/configs/qua/: fumocirc.ini
tests/skins/: .gitignore
tests/test_dependencies/: constants.rs  mod.rs  util.rs
