[package]
name = "rgc-skin"
version = "0.0.1"
edition = "2024"
repository = "https://github.com/menvae/RGC-Skin"
authors = ["menvae"]
categories = ["wasm"]
description = "A library for converting rhythm game skins."
keywords = [
  "wasm",
  "rhythm-game",
  "parser",
  "converter",
  "skin"
]
license = "MIT"
exclude = [
    "tests/*",
    ".vscode/*",
    "package.json"
]

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false # TODO: re add doctest when we have better docs

[dependencies]
paste = "1.0.15"
wasm-bindgen = "0.2.100"
js-sys = "0.3.78"
image = { version = "0.25.8", default-features = false, features = ["png"] }
indexmap = { version = "2.12.0", features = ["serde"] }
serde = { version = "1.0.228", default-features = false, features = ["derive", "alloc"] }
serde_json = { version = "1.0.145", default-features = false, features = ["std"] }
serde_derive = "1.0.228"

[profile.release]
strip = false
debug = true
opt-level = 3
lto = true

[build]
jobs = 8