[package]
name = "rgskin"
version = "0.0.7"
edition = "2024"
repository = "https://github.com/r2o3/rgskin"
authors = ["menvae"]
categories = ["wasm"]
description = "A library for converting, loading and creating skins for various rhythm games."
keywords = [
  "wasm",
  "rhythm-game",
  "parser",
  "converter",
  "skin"
]
license = "MIT"
exclude = [
    "tests/*",
    ".vscode/*",
    "package.json"
]

[workspace]
members = ["rgskin_derive"]

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false # TODO: re add doctest when we have better docs

[features]
default = []
node = []
browser = ["dep:wasm-bindgen-rayon"]

[dependencies]
rgskin_derive = { path = "rgskin_derive", version = "0.0.1" }
rayon = "1.12"
wasm-bindgen-rayon = { version = "1.2", features = ["no-bundler"], optional = true }
xxhash-rust = { version = "0.8.15", features = ["xxh3"] }
include_dir = "0.7.4"
num-traits = "0.2.19"
paste = "1.0.15"
wasm-bindgen = "0.2.100"
js-sys = "0.3.78"
image = { version = "0.25.8", default-features = false, features = ["png", "jpeg"] }
indexmap = { version = "2.12.0", features = ["serde"] }
merge = "0.2.0"
serde = { version = "1.0.228", default-features = false, features = ["derive", "alloc"] }
serde_json = { version = "1.0.145", default-features = false, features = ["std"] }
serde_derive = "1.0.228"
dashmap = { version = "6.2.1", features = ["rayon"] }
fast_image_resize = { version = "6.0.0", features = ["rayon", "image"] }

[profile.release]
strip = false
debug = true
opt-level = 3
lto = true
